my portfolio cantinue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,64 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="brand">B&M</a>
+        <div class="menu-btn"></div>
+        <div class="navigation">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Siklls</a>
+            <a href="#">Services</a>
+            <a href="#">Work</a>
+            <a href="#">Contact</a>
+
+        </div>
+    </header>
+    <section class="main" id="main">
+        <div class="content">
+            <h2>Hello, I'm <br> <span>Boboraximova Maftuna</span> </h2>
+            <div class="animated-text">
+                <h3>Full stack developer</h3>
+                <h3>PHP</h3>
+                <h3>JavaScript</h3>
+            </div>
+            <a href="#" class="btn">See My Work  </a>
+            <div class="media-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </section>
+    <section class="about" id="about">
+        <div class="title reveal">
+            <div class="section-title">About Me</div>
+        </div>
+        <div class="content">
+            <div class="column col-left reveal">
+                <div></div>
+            </div>
+        </div>
+    </section>
+    <section class="siklls">
+        <div class="title reveal">
+            <div class="section-title">About Me</div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="title reveal">
+            <div class="section-title">About Me</div>
+        </div>
+    </section>
+    <section class=" work">
+        <div class="title reveal">
+            <div class="section-title">About Me</div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="title reveal">
+            <div class="section-title">About Me</div>
+        </div>
+    </section>
 </body>
 </html>
